--- a/Glass/Layout.master
+++ b/Glass/Layout.master
@@ -35,8 +35,8 @@
         <script type="text/javascript">
             var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
             Tawk_API.visitor = {
-                name  : '<%= ObterNomeUsuario() %>',
-                email : '<%= ObterEmailUsuario() %>'
+                name  : "<%= ObterNomeUsuario() %>",
+                email : "<%= ObterEmailUsuario() %>"
             };
             (function(){
             var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
