--- a/Glass/Relatorios/ModeloLiberacao/Padrao/rptLiberacao.rdlc
+++ b/Glass/Relatorios/ModeloLiberacao/Padrao/rptLiberacao.rdlc
@@ -30,6 +30,13 @@
       </ConnectionProperties>
       <rd:DataSourceID>b60032b0-73ac-4601-ab9a-5ac94301ac8a</rd:DataSourceID>
     </DataSource>
+    <DataSource Name="GlassDataRelModel2">
+      <ConnectionProperties>
+        <DataProvider>System.Data.DataSet</DataProvider>
+        <ConnectString>/* Local Connection */</ConnectString>
+      </ConnectionProperties>
+      <rd:DataSourceID>eba8f3b2-8766-41b7-815b-c2a05bd0cf50</rd:DataSourceID>
+    </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="Cheques">
@@ -755,7 +762,7 @@
     </DataSet>
     <DataSet Name="ProdutosCortados">
       <Query>
-        <DataSourceName>GlassDataRelModel1</DataSourceName>
+        <DataSourceName>GlassDataRelModel2</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
@@ -786,6 +793,10 @@
         <Field Name="PedCli">
           <DataField>PedCli</DataField>
           <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="Peso">
+          <DataField>Peso</DataField>
+          <rd:TypeName>System.Single</rd:TypeName>
         </Field>
         <Field Name="Qtde">
           <DataField>Qtde</DataField>
