--- a/Glass/Relatorios/ModeloLiberacao/Padrao/rptLiberacaoViaAlmoxarife.rdlc
+++ b/Glass/Relatorios/ModeloLiberacao/Padrao/rptLiberacaoViaAlmoxarife.rdlc
@@ -23,6 +23,13 @@
       </ConnectionProperties>
       <rd:DataSourceID>a3d1ab6e-7183-4f25-8d8c-e941a8da41ba</rd:DataSourceID>
     </DataSource>
+    <DataSource Name="GlassDataRelModel2">
+      <ConnectionProperties>
+        <DataProvider>System.Data.DataSet</DataProvider>
+        <ConnectString>/* Local Connection */</ConnectString>
+      </ConnectionProperties>
+      <rd:DataSourceID>235cf73f-3c01-43fb-b00b-4f68a366ce7d</rd:DataSourceID>
+    </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="ResumoCorte">
@@ -751,7 +758,7 @@
     </DataSet>
     <DataSet Name="ProdutosCortados">
       <Query>
-        <DataSourceName>GlassDataRelModel1</DataSourceName>
+        <DataSourceName>GlassDataRelModel2</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
@@ -782,6 +789,10 @@
         <Field Name="PedCli">
           <DataField>PedCli</DataField>
           <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="Peso">
+          <DataField>Peso</DataField>
+          <rd:TypeName>System.Single</rd:TypeName>
         </Field>
         <Field Name="Qtde">
           <DataField>Qtde</DataField>
