#70770 Criação de um campo EmailFiscal

--- a/Glass/Relatorios/NFe/rptDanfeRetrato.rdlc
+++ b/Glass/Relatorios/NFe/rptDanfeRetrato.rdlc
@@ -5856,6 +5856,10 @@
           <DataField>BarCodeImage</DataField>
           <rd:TypeName>System.Byte[]</rd:TypeName>
         </Field>
+        <Field Name="EmailFiscal">
+          <DataField>EmailFiscal</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:ObjectDataSourceSelectMethod>GetAll</rd:ObjectDataSourceSelectMethod>
